모임_상세_페이지_개발 : feat : 날짜 선택 창 x축 스크롤을 위한 globals.css 내부 overflow-x auto 변경 https://github.com/Chuseok22/time-mate-web/issues/13

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@ html, body {
   height: 100%;
   height: 100dvh;
   -webkit-overflow-scrolling: touch;
-  overflow-x: hidden;
+  overflow-x: auto;
   overscroll-behavior: none; /* ios Safari 바운스 스크롤 방지 */
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
